	PR ld/12161 	* elf32-avr.c (elf32_avr_check_relocs): Delete. 	(elf_backend_check_relocs): Delete.